# MaaCoC

./: .gitignore  CMakeLists.txt  README.md
assets/pipeline/: main.json
cmake/: FetchMaaAgentBinary.cmake  FetchMaaFramework.cmake
src/: Log.h  Logo.hpp  main.cpp
src/Maa/: Controller.cpp  Controller.hpp  Resource.cpp  Resource.hpp  Tasker.cpp  Tasker.hpp
src/Maa/Toolkit/: AdbDevice.cpp  AdbDevice.hpp
